# tauri-plugin-notifications-repro

./: README.md  package-lock.json  package.json
src/: App.tsx  tauri-plugin-notifications-api.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
